<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".MainActivity" 
    android:orientation="vertical" >
    <TextView
        android:id="@+id/detailBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@android:color/darker_gray"
        android:text="@string/zero"
        android:textSize="42sp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="right"
        android:textColor="@android:color/black"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:baselineAligned="false">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/btn_ope_clear"
		        android:layout_weight="1"
		        android:text="@string/clear"
		        style="@style/numSize"
		        android:background="@color/orange"
		        android:layout_marginBottom="5dp"
		        android:layout_marginRight="3dp"
		        android:layout_marginLeft="2dp"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/btn_leftBracket"
		        android:layout_weight="1"
		        android:text="@string/leftBracket"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/btn_rightBracket"
		        android:layout_weight="1"
		        android:text="@string/rightBracket"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/btn_ope_del"
		        android:layout_weight="1"
		        android:text="@string/delete"
		        style="@style/numSize"
		        android:background="@color/my_blue"
		        android:layout_marginBottom="5dp"></Button>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_7"
		        android:text="@string/seven"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_8"
		        android:text="@string/eight"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_9"
		        android:text="@string/nine"
		        style="@style/numSize"></Button>
	         <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_ope_add"
		        android:text="@string/add"
		        style="@style/numSize"
		        android:background="@color/light_grey"
		        android:layout_marginBottom="5dp"></Button>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_4"
		        android:text="@string/four"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_5"
		        android:text="@string/five"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_6"
		        android:text="@string/six"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_ope_minus"
		        android:text="@string/minus"
		        style="@style/numSize"
		        android:background="@color/light_grey"
		        android:layout_marginBottom="5dp"></Button>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_1"
		        android:text="@string/one"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_2"
		        android:text="@string/two"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_Num_3"
		        android:text="@string/three"
		        style="@style/numSize"></Button>
	        <Button
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:id="@+id/btn_ope_multi"
		        android:text="@string/multi"
		        style="@style/numSize"
		        android:background="@color/light_grey"
		        android:layout_marginBottom="5dp"></Button>
	    </LinearLayout>
	    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="horizontal">
	            <Button
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:id="@+id/btn_Num_dot"
			        android:layout_weight="1"
			        android:text="@string/dot"
			        style="@style/numSize"
			        android:background="@color/orange"
			        android:layout_marginBottom="5dp"
			        android:layout_marginRight="3dp"
		        	android:layout_marginLeft="2dp"></Button>
	            <Button
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_weight="1"
			        android:id="@+id/btn_Num_0"
			        android:text="@string/zero"
			        style="@style/numSize"></Button>
	            <Button
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_weight="1"
			        android:id="@+id/btn_Num_equal"
			        android:text="@string/equal"
			        style="@style/numSize"
			        android:background="@color/orange"
			        android:layout_marginBottom="5dp"
			        android:layout_marginRight="3dp"
			        android:layout_marginLeft="2dp"></Button>
	            <Button
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_weight="1"
			        android:id="@+id/btn_ope_div"
			        android:text="@string/div"
			        style="@style/numSize"
			        android:background="@color/light_grey"
			        android:layout_marginBottom="5dp"></Button>
	        </LinearLayout>
        </LinearLayout>
</LinearLayout>
